apps/traefik-forward-auth/whoami/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.stonegarden.dev`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: traefik-forward-auth
  tls:
    certResolver: letsencrypt
